--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -86,11 +86,13 @@ Science [mass noun] - the intellectual and practical activity encompassing the s
 Science is a process for learning about nature in which competing ideas about how the world works are measured against observation.
 \end{quote}
 
-Hence, science is a method to find out how to world works.\footnote{Epistemology, from Greek episteme = knowledge and logos = word is the branch of philosophy concerned with what knowledge is, how it can be acquired, and what can be known} In fact, "method" is an understatement. In the last centuries, the scientific method has been the reason for an unprecedented increase in knowledge, opportunity and well-being. And at least in the western world, science has become the most widely accepted answer to what one can know and how to find it out (epistemology). 
+Hence, science is a method to find out how the natural world world works based on observations. The latter distinguishes the sciences from the arts (e.g. paintings, music, dance), and from the humanities that study aspects of human culture (e.g. languages, literature, philosophy and history). The distinction between humanities and sciences has become less clear, however, because fields such as linguistics, economics or sociology are increasingly using the same formal approaches as the natural sciences. For these fields, the terms social sciences are now commonly used. 
 
-\marginnote{Many famous scientists engaged in personal feuds that, looking back, seem to be fueled by irrationality and personal pride. The doubtlessly ingenious Isaac Newton engaged in various spiteful and bitter feuds, including his most famous battle with German mathematician Gottfried Leibniz over the invention of infinitesimal calculus.}
+The increasing adaptation of scientific methods also in disciplines that are not classically counted to the sciences has good reasons. In the last centuries, the scientific method has been the reason for an unprecedented increase in knowledge, opportunity and human well-being. As a result, science has become the most widely accepted answer to what one can know and how to find it out (epistemology), at least in the western world. 
 
-But science is also a human endeavor. ``Science" may as well refer to the history of science, the state of scientific knowledge, or science as a social institution. Those latter aspects of science are less formally defined and stable that science as a method - if we look at the history of science, we see individuals that are unified by a common cause, but that are at the same time subject to their national and cultural influences as well as by personal vanity, pride or madness. As a result, the history of science, as well as its present state, is complicated by personal preferences, power games and random events, in the same way as political and economic history is.
+\marginnote{Epistemology, from Greek episteme = knowledge and logos = word is the branch of philosophy concerned with what knowledge is, how it can be acquired, and what can be known}
+
+But science is also a human endeavor. ``Science" may as well refer to the history of science, the state of scientific knowledge, or science as a social institution. Those latter aspects of science are less formally defined and stable that science as a method - if we look at the history of science, we see individuals that are unified by a common cause, but that are at the same time subject to their national and cultural influences as well as by personal vanity, pride or madness.\marginnote{Many famous scientists engaged in personal and irrational feuds. For example, the doubtlessly ingenious Isaac Newton engaged in countless spiteful and bitter fights, including his most famous battle with German mathematician Gottfried Leibniz over the invention of infinitesimal calculus.} As a result, the history of science, as well as its present state, is complicated by personal preferences, power games and random events, in the same way as political and economic history is. 
 
 In the center of science, however, remains a set of assumptions and methods, a philosophy if you will, that allows us to draw and agree on conclusions from empirical observations. Not every scientist is aware of the ``formal rules" of these methods, but that does not mean that (s)he would not apply them. In his book "Induction \& Intuition in Scientific Thought", Peter Medawar notes: 
 
@@ -102,6 +104,15 @@ It may thus be possible to do science without having ever learned the basics of 
 
 
 \section{Philosophical foundations of scientific thinking}
+
+
+
+\subsection{Logic}
+
+Logic\marginnote{Statements or claims that can be true or false are called propositions. If we use propositions in an argument, we call them premises. The result of an argument is called a conclusion.} deals with the standards and criteria to evaluate the validity of reasoning. In classical education, it is a counterpart to rhetoric, which studies how to formulate arguments convincingly (even if they are not true). 
+
+The study of logic is sometimes further subdivided into informal and formal logic. Informal logic evaluates the validity of arguments presented in ordinary language, while formal logic is concerned with the validity of arguments in formalized or mathematical language. There is no fundamental difference between the rules of logic in those two areas, but informal logic is presented with the additional challenge to examine the implicit premises (sometimes also called warrants) included in verbal arguments. 
+
 
 \subsection{Empiricism and induction}
 
@@ -133,13 +144,15 @@ Because of the problem of induction, there has always been a stain on inductive 
 Rationalism, in contrast to empiricism, holds the view that knowledge is created mainly by reasoning. In one of the foundational works of modern science, "Le Discours de la Méthode (1637)"  \footnote{The full title of this famous essay is "Discourse on the Method of Rightly Conducting One's Reason and of Seeking Truth" \citep{Descartes-DiscourseMethodRightly-1673}}, René Descartes famously observed: 
 
 \begin{quote}
-Good sense is, of all things among men, the most equally distributed; for every one thinks himself so abundantly provided with it, that those even who are the most difficult to satisfy in everything else, do not usually desire a larger measure of this quality than they already possess.\footnote{ These words of one of the founding fathers of what we today consider Science are often read and cited as a sarcastic observation of human vanity. However, if one continues reading, it becomes clear that Descartes may, after all, have been serious about his faith in human rationality. He goes on to state: ``
-And in this it is not likely that all are mistaken the conviction is rather to be held as testifying that the power of judging aright and of distinguishing truth from error, which is properly what is called good sense or reason, is by nature equal in all men; and that the diversity of our opinions, consequently, does not arise from some being endowed with a larger share of reason than others, but solely from this, that we conduct our thoughts along different ways, and do not fix our attention on the same objects. ''}
+Good sense is\marginnote{ These words of one of the founding fathers of Science are often read as a sarcastic observation of human vanity. However, if one continues reading, it becomes clear that Descartes may, after all, have been serious about his faith in human rationality - he continues: ``And in this it is not likely that all are mistaken. The conviction is rather to be held as testifying that the power of judging [...] is by nature equal in all men; and that the diversity of our opinions, consequently, does not arise from some being endowed with a larger share of reason than others, but solely [because] we conduct our thoughts along different ways, and do not fix our attention on the same objects. ''}, of all things among men, the most equally distributed; for every one thinks himself so abundantly provided with it, that those even who are the most difficult to satisfy in everything else, do not usually desire a larger measure of this quality than they already possess.
 \end{quote}
 
 Pure thinking and logical conclusions are a fine thing, but a problem for a pure rationalist is that s(he) still needs something to think  about - from where do the objects and basic assumptions arise to which we can apply our rational thoughts? Rationalists differ though in their view on this matter. Some philosophers have stressed experience as providing these starting points, while others have maintained that there are some innate concepts or truths that we can know without reference to the material world. 
 
-\paragraph{Deductive reasoning}\marginnote{Deductive reasoning = conclude from the general to the specific.} Wherever the starting points of rationalism come from, the reasoning natural to rationalism is deductive reasoning. A deduction is a conclusion from the general to the specific. Example: all people from Frankfurt like applewine, I am from Frankfurt, therefore I like applewine. An important difference to inductive reasoning is that, if assumptions are correct, conclusions made by deduction are necessarily correct. This is an important motivation for the further development of the scientific method.
+\paragraph{Deductive reasoning}Wherever\marginnote{Deductive reasoning = conclude from the general to the specific.} the starting points of rationalism come from, the reasoning natural to rationalism is deductive reasoning. A deduction is a conclusion from the general to the specific.\marginnote{In logic, the applewine example would be called a syllogism (Greek: syllogismos, "conclusion, inference" - a deductive argument based on two or more premises). The classical form, defined by Aristotle, consists of a general statement (the major premise) with a specific statement (the minor premise). In rhetoric, the major premise is often omitted, assuming the audience intuitively accepts it "Socrates is mortal because he is a human" - this is called an Enthymeme} 
+See \href{https://en.wikipedia.org/wiki/Syllogism}{wikipedia} for further explanations. Example: all people from Frankfurt like applewine, I am from Frankfurt, therefore I like applewine. The last sentence 
+
+An important difference to inductive reasoning is that, if assumptions are correct, conclusions made by deduction are necessarily correct. This is an important motivation for the further development of the scientific method.
 
 
 \section{The basic science stance}
@@ -148,11 +161,11 @@ In the previous section, we have learned about two fundamentally different thoug
 
 \begin{itemize}
 \item There is a material reality, and we can observe it.
-\item The material reality follows certain general laws. We can discover the nature of these laws (scientific theory), and we can do this objectively, meaning that everyone sharing the same basic principles (the scientific method) will agree eventually
+\item The material reality follows certain general laws.\marginnote{Laws differ from scientific theories in that they do not propose a mechanism or explanation for the observed natural phenomena} We can discover the nature of these laws and their underlying causes (scientific theory), and we can do this objectively, meaning that everyone sharing the same basic principles (the scientific method) will agree eventually
 \item Discovery happens by (a limited number of) empirical observations (empiricism) and reasoning (rationalism), which are combined in the scientific method. 
 \end{itemize}
 
-The\marginnote{There have been some fierce debates in the 90's between natural scientists and postmodernist. A very good example is the so-called Sokol affair, in which the physics professor Alan Sokal published a nonsense article full of deliberately incomprehensible jargon in a post-modernist academic journal \citep{Sokal-BeyondhoaxScience-2008}} first two statements express what is known in philosophy as positivism. Note that there are parts of social science (but not the natural sciences) that actively deny the truth of these statements. A notorious example are extreme positions of social constructionism and postmodernism, which hold broadly the view that reality and truth is not absolute, but a property that is constructed or negotiated through the interactions in a society.
+The\marginnote{There have been some fierce debates in the 90's between classical scientists and postmodernist. An example is the so-called Sokol affair, when the physics professor Alan Sokal published a nonsense-article full of deliberately incomprehensible jargon in a post-modernist academic journal in an attempt to expose the methodological weakness of this discipline \citep{Sokal-BeyondhoaxScience-2008}} first two statements express what is known in philosophy as positivism. Note that there are parts of social science (but not the natural sciences) that actively deny the truth of these statements. A notorious example are extreme positions of social constructionism and postmodernism, which broadly hold the view that reality and truth are not absolute, but constructed or negotiated through the interactions in a society.
 
 % TODO add Postmodernism Generator, Fashionable Nonsense, higher superstition
 
@@ -161,7 +174,7 @@ The\marginnote{There have been some fierce debates in the 90's between natural s
 
 \marginnote{A wider account of the different views on the scientific method on wikipedia \href{https://en.wikipedia.org/wiki/History_of_scientific_method}{here}}
 
-By now, we have learned about rationalism and empiricism, and we have defined the basic assumptions of science, but we are yet to learn how we can bring these parts together to create knowledge - the scientific method. 
+By now, we have learned about rationalism and empiricism, and we have defined the basic assumptions of science, but we are yet to learn how we can bring these parts together to create scientific knowledge. Hence, we still have to discover the heart of science - the scientific method. 
 
 \subsection{Aristotle's view on the scientific method in his Posterior Analytics}
 
@@ -215,14 +228,23 @@ We stay with the problem of induction, but take a 2000-yr leap to the the arguab
 
 \paragraph{Hypothetico-deductive method} One\marginnote{Popper developed the hypothetico-deductive interpretation of the scientific method, the currently accepted orthodox narrative of how science works} of Popper's main contributions to the scientific method was to take a radical step and remove the induction completely from the scientific equation. According to Popper, the essence of science is not to produce new theories, but to have a method to reject them. We don't care how new theories arise: they may be guessed, they may be induced, this is not part of the scientific method. The methods starts once we have a theory: we look at the predictions of this theory (deduction), we can test it against observation and see whether the theory is compatible with it (deduction), and if not, we can conclude that the theory is wrong (deduction). Through this construction, science consists only of logically clean deductions. Here a summary of this method - again, if someone asks you what the scientific method is, this is what you should say:
 
+\marginnote{A hypothesis is a proposed law or explanation for a natural phenomenon.}
+
 \begin{enumerate}
-\item Form / guess a hypothesis about a phenomenon in nature
-\item Derive predictions from hypothesis
-\item Test predictions against observation
+\item Form / guess a hypothesis about a scientific law or a theory that explains a phenomenon in nature
+\item Derive predictions from this hypothesis
+\item Test those predictions against observation
 \item Draw conclusions about the validity of the hypothesis
 \end{enumerate}
 
-It\marginnote{You cannot prove a theory, you can only reject. Hence, never write: ``we proved A'' - if you must, write ``the data is compatible with A''} follows from Popper that ``you cannot prove a theory, you can only reject'' - hence, avoid using the word proof in scientific articles - many people care deeply about Popper, and they will react strongly to it!
+It\marginnote{You cannot prove a theory, you can only reject. Hence, never write: ``we proved A'' - if you must, write ``the data is compatible with A''} follows from Popper that ``you cannot prove a theory, you can only reject'' - hence, avoid using the word proof in scientific articles - many people care deeply about Popper, and they will react strongly to it! 
+
+
+% TODO Yet, even Popper allows for "provisional truths" if 
+
+% TODO working hypothesis
+
+% TODO falsifiable - not even wrong \marginnote{A requirement for a scientifically valid hypothesis is that it is testable / falsifiable.}
 
 
 \subsection{Multiple working hypothesis}
@@ -263,6 +285,9 @@ In the heart of all that, however, remains the idea of creating ``near-certain''
 \end{itemize*}
 
 \end{mdframed}
+
+
+% laws theories, models --> more-depth discussion. See also https://en.wikipedia.org/wiki/Scientific_law
 
 
 \chapter{On the shoulders of giants - the scientific literature}
@@ -554,17 +579,17 @@ Poster presentations are offered on many conferences for participants that don't
 Blogs, social media and similar outlets have become more important in recent years. A collection of things that are worth checking out is provided in our \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/SocialMedia}{lab on social media}.
 
 
-
 \section{Arguments and logical fallacies}
 
 In his article ``Sounder thinking through clearer writing'', \citet{Woodford-Sounderthinkingthrough-1967} cites jargon as one of the key contributors to inefficient communication. He goes further, however, stating that if you communicate without clarity, you will start thinking without clarity yourself, leading to a tendency to draw wrong conclusions. Hence, clear communication is important for you and for others.
 
+
 A similar case\marginnote{A \href{https://en.wikipedia.org/wiki/List_of_fallacies}{long list of logical fallacies} is provided on Wikipedia} are rhetorical tricks and logical fallacies. There is a long list of archetypical conclusion structures that sound right, but that are typically wrong. Examples of these are
 
 \begin{itemize}
-\item False dilemma - if we want everything to be completely correct, we can stop doing science!
-\item False equivalence - no model is completely perfect, therefore there is no difference between using model A and B
-\item Strawman - proving an argument wrong that is similar, but not identical to that of the opponent - A: Diversity can increase ecosystem function. B: my opponent suggests that     diversity increases human well-being. But this is clearly wrong. Imaging a world where we have no HIV virus. Now, if I introduce the virus, we have more diversity. But human well-being is clearly lower!
+\item False dilemma - example: if we want everything to be completely correct, we can stop doing science!
+\item False equivalence - example: no model is completely perfect, therefore there is no difference between using model A and B
+\item Strawman - proving an argument wrong that is similar, but not identical to that of the opponent -  example: A: Diversity can increase ecosystem function. B: my opponent suggests that diversity increases ecosystem services. But this is clearly wrong. Imaging a world where we have no HIV virus. Now, if I introduce the virus, we have more diversity. But human well-being is clearly lower!
 \end{itemize}
 
 Getting to know these fallacies has many advantages: you will train your logical thinking in general. You will be able to spot these fallacies when used by others. And lastly, you will notice if you use them yourself, avoiding wrong conclusions and sloppy arguments. Therefore, I highly recommend looking at this material!
@@ -635,7 +660,6 @@ A paragraph is supposed to be a logical unit of text. The beginning of a paragra
 \subsection{Logic}
 
 Your text should be logically flawless. Read again about fallacies. Read about the scientific method and induction. Be careful with the use of logical indicators such as "thus", "hence", "however" - is the implication of this indicators really supported by your argument? More hints in the later section on common mistakes.
-
 
 \subsection{Clarity}
 
