--- a/Labs/Statistics/Script/EssentialStatistics.Rnw
+++ b/Labs/Statistics/Script/EssentialStatistics.Rnw
@@ -19,6 +19,10 @@
 \definecolor{darkblue}{rgb}{0,0,.5}
 \hypersetup{colorlinks=true, breaklinks=true, linkcolor=darkblue, menucolor=darkblue, urlcolor=blue, citecolor=darkblue}
 
+
+
+\setcounter{secnumdepth}{1}
+
 \lstset{ % settings for listings needs to be be changed to R sytanx 
 language=R,
 breaklines = true,
@@ -27,15 +31,17 @@ basicstyle=\ttfamily \scriptsize,
 keywordstyle=\color{black},                          
 identifierstyle=\color{black},
 commentstyle=\color{gray},
-frame=single,
-framerule=0.4pt,
-framesep=3pt,
 xleftmargin=3.4pt,
 xrightmargin=3.4pt,
 numbers=none
 }
 
-\setcounter{secnumdepth}{1}
+
+<<setup, cache=FALSE, include=FALSE>>=
+library(knitr)
+opts_knit$set(tidy = T, fig=TRUE, width = 10)
+render_listings()
+@
 
 
 \title{Essential\\statistics}
@@ -43,8 +49,6 @@ numbers=none
 
 
 \begin{document}
-
-\SweaveOpts{concordance=TRUE}
 
 \let\cleardoublepage\clearpage % No empty pages between chapters
 \maketitle
@@ -181,7 +185,7 @@ A common situation in which we want to use summary statistics are repeated obser
 
 \begin{figure}[htbp]
 \begin{center}
-<<fig=TRUE, echo=FALSE>>=
+<<echo=FALSE>>=
 seed = (123)
 parameter = seq(-2,8,len=500)
 
@@ -234,7 +238,7 @@ A second important case for summary statistics is correlation. Correlation metho
 
 \begin{figure}[htbp]
 \begin{center}
-<<fig = T, echo = F>>=
+<<echo = F>>=
 # From https://en.wikipedia.org/wiki/File:Correlation_examples2.svg
 
 #Title: An example of the correlation of x and y for various distributions of (x,y) pairs
@@ -343,7 +347,7 @@ Summary statistics are useful, but also dangerous. A famous example is Anscombe'
 
 \begin{figure}[htbp]
 \begin{center}
-<<fig = T, echo = F, results=hide>>=
+<<echo = F, results="hide">>=
 
 require(stats); require(graphics)
 ##-- now some "magic" to do the 4 regressions in a loop:
@@ -395,7 +399,7 @@ The principle\marginnote{Examples of distorting graphics \href{https://en.wikipe
 \begin{center}
 
 \setkeys{Gin}{width=\textwidth}
-<<fig=TRUE, echo = FALSE>>=
+<<echo = FALSE>>=
 par(mfrow = c(2,2))
 
 plot(co2, ylab = expression("Atmospheric concentration of CO"[2]),
@@ -459,7 +463,7 @@ Hence, we need more repetitions. Let's say we take a few more pots, 30 in the hy
 
 \begin{figure}[htbp]
 \begin{center}
-<<fig=TRUE, echo = FALSE>>=
+<<echo = FALSE>>=
 
 boxplot(weight ~ group, data = PlantGrowth, main = "Plant Growth",
         ylab = "Dried weight of plants", col = "lightgray",
@@ -537,7 +541,7 @@ A t-test tests for differences between the means of two normally distributed sam
 
 \begin{figure}[htbp]
 \begin{center}
-<<fig=T, echo = F>>=
+<< echo = F>>=
 boxplot(extra ~ group, data = sleep, col = "lightgrey", xlab = "treatment", ylab = "Extra hours sleep")
 @
 \caption{Data from \citet{Student-probableerrormean-1908}}
@@ -610,7 +614,7 @@ summary(fit)
 
 \begin{figure}[htbp]
 \begin{center}
-<<fig=T, echo = F>>=
+<< echo = F>>=
 plot(airquality$Temp ~ airquality$Ozone, ylab = "Temperature", xlab = "Ozone")
 abline(fit)
 @
