--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -295,9 +295,8 @@ In the heart of all that, however, remains the idea of creating ``near-certain''
 Science today is highly specialized. Most basic questions have long been solved. You may think of the scientific enterprise as a "house of knowledge", where one story is built on the next. This is often expressed by a famous quote by Isaac Newton 
 
 \begin{quote}
-If I have seen further it is by standing on the shoulders of Giants.
-\end{quote}\footnote{Brian Gottesman notes \href{http://mentalfloss.com/article/24520/6-things-you-should-know-about-isaac-newton}{here}: "Sir Isaac's most famous quotation may well have been an exercise in sarcastic, spiteful anger. In February 1676 Newton wrote to Hooke "if I have seen further it is by standing on the shoulders of Giants." Often taken as a sign of Newton's great humility, this famed quote was almost certainly intended as an insult to Hooke, who was hunchbacked and may have suffered from a form of dwarfism."
-}
+If I have seen further it is by standing on the shoulders of Giants.\footnote{Brian Gottesman notes \href{http://mentalfloss.com/article/24520/6-things-you-should-know-about-isaac-newton}{here}: "Sir Isaac's most famous quotation may well have been an exercise in sarcastic, spiteful anger. In February 1676 Newton wrote to Hooke "if I have seen further it is by standing on the shoulders of Giants." Often taken as a sign of Newton's great humility, this famed quote was almost certainly intended as an insult to Hooke, who was hunchbacked and may have suffered from a form of dwarfism."}
+\end{quote}
 
 Regardless of whether the quote was meant as it is interpreted today, the fact remains that scientists today are hardly explorers that go far on unmarked territory. Before you start a new research project, you should therefore find out what has already been done in on the question you are interested in, to understand better what you are doing, but also to avoid doing something that has already been done. 
 
